--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -28,10 +28,11 @@ $red-light: #e35d6a;
 $red-lighter: #fddde0;
 $red-dark: #d33040;
 //
-$pink-dark: #e60965;
-$pink: #f94892;
-$pink-light: #ffa1c9;
-$pink-lighter: #fbe5e5;
+$pink-darker: hsl(342, 92%, 47%);
+$pink-dark: hsl(342, 79%, 55%);
+$pink: hsl(342, 94%, 63%);
+$pink-light: hsl(342, 100%, 82%);
+$pink-lighter: hsl(342, 73%, 94%);
 
 $yellow-primary: #ffc107;
 $yellow-dark: #996a04;
