--- a/scss/text.module.scss
+++ b/scss/text.module.scss
@@ -14,9 +14,16 @@
     font-size: 1rem;
     transition: 0.12s linear;
     border-radius: 5px;
+    width: 100%;
     &:focus {
       border: 1px solid $pink;
       outline: 0;
+    }
+    &::placeholder {
+      font-weight: 400;
+    }
+    &:read-only {
+      pointer-events: none;
     }
   }
   .textarea {
