--- a/scss/app.module.scss
+++ b/scss/app.module.scss
@@ -1,16 +1,32 @@
+@import './var';
 .supCont {
   display: grid;
   place-items: center;
   margin: 2rem 0;
+  max-width: 100vw;
+  overflow-y: scroll;
   .cont {
     width: 95%;
     max-width: 1100px;
+
     .top {
       width: 100%;
       display: grid;
       grid-template-columns: 1.6fr 1fr;
       gap: 2rem;
       padding-bottom: 2rem;
+    }
+    .bottom {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr 1.5fr;
+      gap: 2rem;
+      padding-bottom: 2rem;
+
+      .prices {
+        display: grid;
+        gap: 0.5rem;
+      }
     }
   }
 }
@@ -20,6 +36,16 @@
       .top {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
+      }
+      .bottom {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        & > div:nth-child(1) {
+          grid-row: 2 / 3;
+        }
+        & > div:nth-child(2) {
+          grid-row: 1 / 2;
+        }
       }
     }
   }
