--- a/scss/from.module.scss
+++ b/scss/from.module.scss
@@ -4,6 +4,8 @@
   grid-template-columns: minmax(160px, 0.5fr) 1fr;
   grid-template-rows: 1fr;
   gap: 1rem;
+  display: grid;
+  place-items: center;
   .logo {
     aspect-ratio: 1 / 1;
     width: 100%;
