--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -1,9 +1,11 @@
+@import './var';
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: clamp(14px, 3vw, 16px);
 }
 
 a {
@@ -23,4 +25,17 @@ a {
 
 input {
   width: 100% !important;
+}
+button {
+  background-color: #fff;
+  color: $pink-dark;
+  border: 1px solid $pink;
+  margin-right: 0.2rem;
+  border-radius: 3px;
+  cursor: pointer;
+  &:hover {
+    background: linear-gradient(90deg, $red-primary 0%, $pink-hot 65%);
+    border: 1px solid transparent;
+    color: #fff;
+  }
 }
