--- a/scss/to.module.scss
+++ b/scss/to.module.scss
@@ -9,24 +9,14 @@
     border-radius: 9px;
     width: 100%;
     padding: 1.5rem;
-    &::after {
-      content: '';
-      top: -3px;
-      left: -3px;
-      right: -3px;
-      bottom: -3px;
-      position: absolute;
-      background: linear-gradient(270deg, red 0%, $pink-dark 65%);
-      z-index: -5;
-      border-radius: 12px;
-    }
+    @include Border;
     h2 {
       position: absolute;
       font-size: 1.3rem;
       top: -36px;
       left: 2.5rem;
       padding-inline: 0.5rem;
-      background: linear-gradient(90deg, red 0%, $pink-dark 65%);
+      background: linear-gradient(90deg, red 0%, $pink-hot 65%);
       background-clip: text;
       color: transparent;
       &::after {
