--- a/scss/text.module.scss
+++ b/scss/text.module.scss
@@ -3,11 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
-  p {
-    font-size: 0.95rem;
-    font-weight: 600;
-    margin: 0;
-  }
+
   & > div {
     display: flex;
     align-items: center;
@@ -34,5 +30,20 @@
   .textarea {
     resize: none;
     padding: 0.5rem;
+  }
+}
+.eLabel {
+  margin: 0;
+
+  input {
+    padding-left: 0.4rem;
+    font-size: 0.95rem;
+    font-weight: 600;
+    border: 0;
+    margin: 0;
+
+    &:focus {
+      border-bottom: 1px solid $grey-lighter;
+    }
   }
 }
