--- a/scss/text.module.scss
+++ b/scss/text.module.scss
@@ -36,11 +36,12 @@
   margin: 0;
 
   input {
-    padding-left: 0.4rem;
     font-size: 0.95rem;
     font-weight: 600;
     border: 0;
     margin: 0;
+    margin-inline: 0.4rem;
+    border-bottom: 1px dotted $grey-light;
 
     &:focus {
       border-bottom: 1px solid $grey-lighter;
