--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -29,6 +29,7 @@ $red-lighter: #fddde0;
 $red-dark: #d33040;
 //
 $pink-darker: hsl(342, 92%, 47%);
+$pink-darkest: hsl(327, 86%, 38%);
 $pink-dark: hsl(342, 79%, 55%);
 $pink: hsl(342, 94%, 63%);
 $pink-hot: hsl(335, 100%, 60%);
