--- a/scss/app.module.scss
+++ b/scss/app.module.scss
@@ -5,8 +5,11 @@
   margin: 2rem 0;
   max-width: 100vw;
   .cont {
-    width: 95%;
+    margin-top: 1rem;
+    width: 98%;
     max-width: 1100px;
+    padding: 3%;
+    border: 1px solid $grey-light;
     .button {
       display: flex;
       gap: 1rem;
